# fetch-ch-tax-rates

./: Cargo.toml  README.md
.github/workflows/: build.yml  lints.yml
src/: main.rs  schema.rs
