[package]
name = "fetch-ch-tax-rates"
description = "Helper tool to download and import tax rate data for Switzerland"
version = "0.1.0"
authors = ["Guillaume Endignoux <ggendx@gmail.com>"]
license = "MIT"
repository = "https://github.com/gendx/fetch-ch-tax-rates"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.101"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
